--- a/resources/views/partials/partialscss.css
+++ b/resources/views/partials/partialscss.css
@@ -48,6 +48,10 @@
     font-weight: 500;
 }
 
+.logout-form {
+    display: inline;
+}
+
 button[type="submit"] {
     padding: 6px 12px;
     border: 1px solid #ddd;
