--- a/resources/views/admin/admin.css
+++ b/resources/views/admin/admin.css
@@ -30,10 +30,20 @@
     height: 100%;
     display: block;
 }
+
 .top-bar-spacer { flex: 1; }
 
 .search-container {
     position: relative;
+    width: 400px;
+}
+
+#search-input {
+    width: 100%;
+    padding: 10px 12px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    font-size: 14px;
 }
 
 .search-dropdown {
@@ -160,13 +170,13 @@
 /* submit button */
 .nb-submit {
     padding: 10px 16px;
-    border: 1px solid #ddd;
-    background: #f5f5f5;
+    border: none !important;
+    background: dodgerblue !important;
     border-radius: 6px;
     cursor: pointer;
     font-size: 0.9rem;
     font-weight: 500;
-    color: black;
+    color: white !important;
     transition: all 0.2s;
     line-height: 1.2;
     display: inline-block;
@@ -311,7 +321,7 @@
 
 .submit-button {
     padding: 12px 24px;
-    background: dodgerblue;
+    background: green !important;
     color: white;
     border: none;
     border-radius: 6px;
@@ -322,7 +332,7 @@
 }
 
 .submit-button:hover {
-    background: #1e90ff;
+    background: #006600;
 }
 
 .visually-hidden {
@@ -341,7 +351,7 @@
 .delete-movie-btn {
     margin-top: 20px;
     padding: 10px 20px;
-    background: #dc3545;
+    background: red;
     color: white;
     border: none;
     border-radius: 6px;
@@ -352,13 +362,13 @@
 }
 
 .delete-movie-btn:hover {
-    background: #c82333;
+    background: #e60000;
 }
 
 .delete-btn {
     margin-left: auto;
     padding: 6px 12px;
-    background: #dc3545;
+    background: red;
     color: white;
     border: none;
     border-radius: 4px;
@@ -368,7 +378,7 @@
 }
 
 .delete-btn:hover {
-    background: #c82333;
+    background: #e60000;
 }
 
 .analytics-empty-state {
@@ -484,16 +494,44 @@
     border-radius: 4px;
     font-weight: 600;
     cursor: pointer;
-    background: #ddd;
-    color: #666;
+    background: dodgerblue;
+    color: white;
 }
 
 .submit-btn-adm.approve-adm {
-    background: #28a745;
+    background: dodgerblue;
     color: white;
 }
 
 .submit-btn-adm.reject-adm {
-    background: #dc3545;
+    background: dodgerblue;
     color: white;
+}
+
+/* Estrelas de rating */
+.movie-rating {
+    margin-top: 20px;
+}
+
+.star {
+    color: #f39c12;
+    font-size: 20px;
+    margin: 0 10px;
+}
+
+.rating-value {
+    margin-left: 10px;
+    color: #666;
+}
+
+.movie-meta-item {
+    margin: 5px 0;
+    color: black;
+    font-size: 17px !important;
+}
+
+.movie-details .movie-title {
+    font-size: 38px !important;
+    font-weight: bold;
+    margin-bottom: 15px;
 }
